fixed graph breaking out of container

--- a/viz/src/App.css
+++ b/viz/src/App.css
@@ -56,6 +56,10 @@
   height: 80%;
 }
 
+#scatter {
+  height: 100vh;
+}
+
 .panel {
   display: flex;
   flex-direction: column;
@@ -98,4 +102,8 @@ input {
   border-radius: 4px;
   font-family: serif;
   margin: 2px;
+}
+
+img {
+  margin: 5px;
 }
